website_project/terraform/layer00/subnets.tf
#Public Subnet
resource "aws_subnet" "public_subnet" {
  vpc_id = aws_vpc.custom_vpc
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    "Name" = "public-subnet"
  }
}

#Private Subnet
resource "aws_subnet" "private_subnet" {
  vpc_id = aws_vpc.custom_vpc
  cidr_block = "10.0.2.0/24"
  availability_zone = "us-east-1b"

  tags = {
    "Name" = "private-subnet" 
  }
}
